# spectro10

./: CMakeLists.txt  audioprocessor.cpp  audioprocessor.h  controlsmenu.cpp  controlsmenu.h  fftmanager.cpp  fftmanager.h  mainwindow.cpp  mainwindow.h  oscilloscope.cpp  oscilloscope.h  settingspage.cpp  settingspage.h  spectrogram.cpp  spectrogram.h  spectropage.cpp  spectropage.h  streammanager.cpp  streammanager.h  utils.cpp  utils.h
